# Q-tris-web-server

./: CMakeLists.txt
include/: Client.hxx  Room.hxx  RoomParams.hxx  RoomsManager.hxx  ServiceManager.hxx  TaskPool.hxx
src/: Client.cxx  Room.cxx  RoomsManager.cxx  ServiceManager.cxx  TaskPool.cxx  main.cxx
